welcome.lessons.welcome.methods.basics.Methods.scala.code
        def goAndGet() {
        if(!estSurBiscuit)
        avance()
        prendsBiscuit()
        recule()
        }

        for (i <- 1 to 7) {
            goAndGet();
      
        }
